<resources>
    <string name="app_name">Reflexive</string>
    <string name="main_username">USERNAME</string>
    <string name="main_classic">CLASSIC</string>
    <string name="main_arcade">ARCADE</string>
    <string name="main_survival">SURVIVAL</string>
    <string name="main_leaderboard">LEADERBOARD</string>
    <string name="rv_classic_menu_level">"LEVEL "</string>
    <string name="classic_game_level">"LEVEL "</string>
    <string name="classic_game_score">"SCORE: "</string>
    <string name="arcade_game_score">"SCORE: "</string>
    <string name="survival_game_score">"SCORE: "</string>
    <string name="classic_game_target">"TARGET: "</string>
    <string name="classic_game_best">"BEST: "</string>
    <string name="arcade_game_last_seconds">LAST SECONDS</string>
    <string name="arcade_game_target">TARGET:</string>
    <string name="arcade_game_best">BEST:</string>
    <string name="survival_game_best">"BEST: "</string>
    <string name="classic_game_paused_1">"GAME"</string>
    <string name="classic_game_paused_2">"PAUSED"</string>
    <string name="arcade_game_paused_1">"GAME"</string>
    <string name="arcade_game_paused_2">"PAUSED"</string>
    <string name="survival_game_paused_1">"GAME"</string>
    <string name="survival_game_paused_2">"PAUSED"</string>
    <string name="leaderboard_classic">CLASSIC</string>
    <string name="leaderboard_arcade">ARCADE</string>
    <string name="leaderboard_survival">SURVIVAL</string>
    <string name="username_dialog_explanation_edit">Edit your username:</string>
    <string name="username_dialog_explanation_enter">Enter your username:</string>
    <string name="username_button_ok">OK</string>
    <string name="username_button_cancel">CANCEL</string>
    <string name="how_to_play_classic_title">HOW TO PLAY?</string>
    <string name="how_to_play_classic_1">Reach the target in given time.</string>
    <string name="how_to_play_classic_2">If you press green button</string>
    <string name="how_to_play_classic_3">your score will increase.</string>
    <string name="how_to_play_classic_4">If you press red button</string>
    <string name="how_to_play_classic_5">your time will decrease.</string>
    <string name="how_to_play_classic_6">Yellow button</string>
    <string name="how_to_play_classic_7">acts like</string>
    <string name="how_to_play_classic_8">the last button you pressed.</string>
    <string name="how_to_play_classic_ok">OK</string>
    <string name="how_to_play_arcade_title">HOW TO PLAY?</string>
    <string name="how_to_play_arcade_1">Reach the target in given time.</string>
    <string name="how_to_play_arcade_2">If you reach the target,</string>
    <string name="how_to_play_arcade_3">you gain extra time.</string>
    <string name="how_to_play_arcade_4">If you press green button</string>
    <string name="how_to_play_arcade_5">your score will increase.</string>
    <string name="how_to_play_arcade_6">If you press red button</string>
    <string name="how_to_play_arcade_7">your time will decrease.</string>
    <string name="how_to_play_arcade_8">Yellow button</string>
    <string name="how_to_play_arcade_9">acts like</string>
    <string name="how_to_play_arcade_10">the last button you pressed.</string>
    <string name="how_to_play_arcade_ok">OK</string>
    <string name="how_to_play_survival_title">HOW TO PLAY?</string>
    <string name="how_to_play_survival_1">No target and time.</string>
    <string name="how_to_play_survival_2">You have 3 chances:</string>
    <string name="how_to_play_survival_3">If you press green button</string>
    <string name="how_to_play_survival_4">your score will increase.</string>
    <string name="how_to_play_survival_5">If you press red button</string>
    <string name="how_to_play_survival_6">or if you miss green button,</string>
    <string name="how_to_play_survival_7">your chances will decrease.</string>
    <string name="how_to_play_survival_8">Yellow button</string>
    <string name="how_to_play_survival_9">acts like</string>
    <string name="how_to_play_survival_10">the last button you pressed.</string>
    <string name="how_to_play_survival_ok">OK</string>
    <string name="username_dialog_warning_1">There exists another user with this username.</string>
    <string name="username_dialog_warning_2">Please enter the username.</string>
    <string name="end_game_with_best_congrats">YOUR BEST!</string>
    <string name="end_game_with_best_score">SCORE:</string>
    <string name="end_game_with_best_ok">OK</string>
    <string name="end_game_without_best_score">SCORE:</string>
    <string name="end_game_without_best_ok">OK</string>
    <string name="main_toast_database_error">Could not be connected to database. Try again later.</string>
    <string name="main_toast_arcade">Will be unlocked when Level 5 is passed.</string>
    <string name="main_toast_survival">Will be unlocked when Level 11 is passed.</string>
</resources>