<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray">

    <TextView
        android:id="@+id/textView_how_to_play_classic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/how_to_play_classic_title" />

    <TextView
        android:id="@+id/textView_how_to_play_classic_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/how_to_play_classic_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView_how_to_play_classic_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_classic_2"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_how_to_play_classic_green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_button_game_6x6_green"
            android:soundEffectsEnabled="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_how_to_play_classic_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/how_to_play_classic_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView_how_to_play_classic_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_classic_4"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_how_to_play_classic_red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_button_game_6x6_red"
            android:soundEffectsEnabled="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_how_to_play_classic_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/how_to_play_classic_5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView_how_to_play_classic_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_classic_6"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_how_to_play_classic_yellow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_button_game_6x6_yellow"
            android:soundEffectsEnabled="false"/>

        <TextView
            android:id="@+id/textView_how_to_play_classic_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_classic_7"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_how_to_play_classic_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/how_to_play_classic_8"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/button_how_to_play_classic_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_menu_dark_gray"
        android:textColor="@color/light_gray"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/how_to_play_classic_ok"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:soundEffectsEnabled="false"/>

</LinearLayout>