<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray">

    <TextView
        android:id="@+id/textView_how_to_play_survival_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/how_to_play_survival_title" />

    <TextView
        android:id="@+id/textView_how_to_play_survival_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/how_to_play_survival_1" />

    <TextView
        android:id="@+id/textView_how_to_play_survival_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/how_to_play_survival_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_how_to_play_survival_gray0"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_button_game_4x4_default"
            app:backgroundTint="@color/dark_gray"
            android:layout_marginRight="4dp"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/button_how_to_play_survival_gray1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_button_game_4x4_default"
            app:backgroundTint="@color/dark_gray"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/button_how_to_play_survival_gray2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_button_game_4x4_default"
            app:backgroundTint="@color/dark_gray"
            android:layout_marginLeft="4dp"
            android:soundEffectsEnabled="false"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/textView_how_to_play_survival_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_survival_3"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_how_to_play_survival_green"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_button_game_6x6_green"
            android:soundEffectsEnabled="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_how_to_play_survival_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/how_to_play_survival_4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView_how_to_play_survival_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_survival_5"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_how_to_play_survival_red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_button_game_6x6_red"
            android:soundEffectsEnabled="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_how_to_play_survival_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/how_to_play_survival_6" />

    <TextView
        android:id="@+id/textView_how_to_play_survival_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/how_to_play_survival_7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView_how_to_play_survival_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_survival_8"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_how_to_play_classic_yellow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_button_game_6x6_yellow"
            android:soundEffectsEnabled="false"/>

        <TextView
            android:id="@+id/textView_how_to_play_survival_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/how_to_play_survival_9"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_how_to_play_survival_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/how_to_play_survival_10"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/button_how_to_play_survival_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_menu_dark_gray"
        android:textColor="@color/light_gray"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/how_to_play_survival_ok"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:soundEffectsEnabled="false"/>

</LinearLayout>