<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray">

    <TextView
        android:id="@+id/textView_username_dialog_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/username_dialog_explanation_edit"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_text_username_dialog_username"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:digits="ABCÇDEFGĞHIİJKLMNOÖPQRSŞTUÜVWXYZabcçdefgğhıijklmnoöpqrsştuüvwxyz1234567890"
        android:maxLength="16"
        app:backgroundTint="@color/dark_gray"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"/>

    <TextView
        android:id="@+id/textView_username_dialog_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/username_dialog_warning_2"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <Button
            android:id="@+id/button_username_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button_menu_dark_gray"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/username_button_cancel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/button_username_dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button_menu_dark_gray"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/username_button_ok"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:soundEffectsEnabled="false"/>

    </LinearLayout>



</LinearLayout>