<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/textView_end_game_with_best_congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/end_game_with_best_congrats"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/button_end_game_with_best_trophy"
            android:layout_width="30dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/trophy"
            android:layout_marginLeft="8dp"
            android:background="@drawable/trophy"
            app:backgroundTint="@color/golden"
            android:soundEffectsEnabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/textView_end_game_with_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/end_game_with_best_score"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/textView_end_game_with_best_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="150"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_end_game_with_best_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_menu_dark_gray"
        android:textColor="@color/light_gray"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/end_game_with_best_ok"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="35dp"
        android:soundEffectsEnabled="false"/>

</LinearLayout>