<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_leaderboard_H1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_leaderboard_classic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/leaderboard_classic"
            android:textSize="20sp"
            android:textStyle="bold"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/button_leaderboard_arcade"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/leaderboard_arcade"
            android:textSize="20sp"
            android:textStyle="bold"
            android:soundEffectsEnabled="false"/>

        <Button
            android:id="@+id/button_leaderboard_survival"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/leaderboard_survival"
            android:textSize="20sp"
            android:textStyle="bold"
            android:soundEffectsEnabled="false"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_V1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_V2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toTopOf="@+id/guideline_leaderboard_H1"
        app:layout_constraintBottom_toTopOf="@id/guideline_leaderboard_H2"
        app:layout_constraintStart_toStartOf="@id/guideline_leaderboard_V1"
        app:layout_constraintEnd_toEndOf="@id/guideline_leaderboard_V2"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-6308768432168130/1457786205">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>